codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__ansi_half_block_avatar_short_below_center.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                        "
"                                        "
"› The composer remains usable in a      "
"  short pane.                           "
"                                        "
"  gpt-5.6-sol default · /tm… LARP mode  "
"                                        "
"                                        "
"                                        "
"                                        "
